# photo-caption-verifier

./: .dockerignore  .gitignore  Dockerfile  app.py  main.py  model.py  pyproject.toml  test_server.ipynb
